--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-CLERK_HOSTNAME=https://fun-aphid-82.clerk.accounts.dev
+CONVEX_DEPLOYMENT=dev:dazzling-sparrow-544 # team: hsalazar-hub, project: sgcc
+
+NEXT_PUBLIC_CONVEX_URL=https://dazzling-sparrow-544.convex.cloud
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZnVuLWFwaGlkLTgyLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_68lCyPpiXvmrP0GppR42yI8abIcwrxqXCMiBrFpNGz
+NEXT_PUBLIC_CLERK_HOSTNAME=https://fun-aphid-82.clerk.accounts.dev
