--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_CONVEX_URL=https://dazzling-sparrow-544.convex.cloud
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZnVuLWFwaGlkLTgyLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_68lCyPpiXvmrP0GppR42yI8abIcwrxqXCMiBrFpNGz
 NEXT_PUBLIC_CLERK_HOSTNAME=https://fun-aphid-82.clerk.accounts.dev
+RESEND_API_KEY=re_Xeq6c2mE_14iuFx8Tt4NqnEHZDKj75XCX
