--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -3,6 +3,8 @@
    * Convex functions run in and is used to typecheck them.
    * You can modify it, but some settings required to use Convex.
    */
+
+ 
   "compilerOptions": {
     /* These settings are not required by Convex and can be modified. */
     "allowJs": true,
@@ -17,7 +19,9 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    
+   
   },
   "include": ["./**/*"],
   "exclude": ["./_generated"]
