--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.22",
+    "@clerk/localizations": "^3.9.12",
     "@clerk/nextjs": "^4.31.6",
     "@clerk/remix": "^4.4.6",
     "@hookform/resolvers": "^3.3.4",
@@ -26,12 +27,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.17.3",
+    "crypto": "^1.0.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "resend": "^4.1.2",
+    "stream": "^0.0.3",
     "svix": "^1.43.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -39,6 +44,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
