--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/localizations": "^3.9.12",
     "@clerk/nextjs": "^4.31.6",
     "@clerk/remix": "^4.4.6",
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -29,6 +30,7 @@
     "convex": "^1.17.3",
     "crypto": "^1.0.1",
     "date-fns": "^3.3.1",
+    "emailjs": "^4.0.3",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
     "nodemailer": "^6.10.0",
